--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-fastapi = "*"
+fastapi = {extras = ["all"],version = "*"}
 
 [requires]
 python_version = "3.6"
