--- a/auth/Pipfile
+++ b/auth/Pipfile
@@ -7,13 +7,14 @@ verify_ssl = true
 pytest = "*"
 pytest-mock = "*"
 pytest-cov = "*"
+mock = "*"
 
 [packages]
 fastapi = {extras = ["all"],version = "*"}
 pyjwt = "*"
 passlib = {extras = ["bcrypt"],version = "*"}
 peewee = "*"
-mock = "*"
+pytest = "*"
 
 [requires]
 python_version = "3.6"
